# django-deployment-tutorial

./: .env.sample  .gitattributes  .gitignore  CHANGELOG.md  Procfile  README.md  app.json  manage.py  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: main.yml
mysite/: asgi.py  conftest.py  urls.py  wsgi_production.py
mysite/core/: admin.py  apps.py  models.py  validators.py  views.py
mysite/core/migrations/: 0001_initial.py
mysite/core/templates/core/: about_page.html  home_page.html
mysite/settings/: base.py  dev.py  production.py  test.py
mysite/static/css/: main.css
mysite/templates/: 404.html  500.html  base.html
mysite/users/: apps.py  factories.py  models.py
mysite/users/migrations/: 0001_initial.py  0002_alter_user_id.py
mysite/users/tests/: test_users.py
requirements/: base.in  base.txt  dev.in  dev.txt  production.in  production.txt
